--- a/web/assets/css/agretemas.css
+++ b/web/assets/css/agretemas.css
@@ -354,6 +354,11 @@ textarea:focus {
         }
     }
 
+    @media (max-width: 400px) {
+        .atras {
+          display: none;
+        }
+      }
 
 /*form Donar Curso*/
 
