--- a/web/assets/css/cuestionario_formu.css
+++ b/web/assets/css/cuestionario_formu.css
@@ -238,6 +238,12 @@ textarea:focus {
     }
 }
 
+@media (max-width: 400px) {
+    .atras .cursos .editar{
+      display: none;
+    }
+
+  }
 
 /*form cuestionario*/
 
