--- a/web/assets/css/cuestionario_formu.css
+++ b/web/assets/css/cuestionario_formu.css
@@ -248,7 +248,22 @@ textarea:focus {
     .cursos{
         display: none;
     }
+    .btnCorrecto{
+        font-size: 15px;
+        display: flex;
+        justify-content: center;
+
+    }
   }
+
+.pregunta{
+    color: black; 
+    font-weight: bold; 
+    font-size: 24px; 
+    position: relative; 
+    top: 20px;
+    word-wrap: break-word;
+}
 
 /*form cuestionario*/
 
