--- a/web/assets/css/stymiscursos.css
+++ b/web/assets/css/stymiscursos.css
@@ -244,4 +244,13 @@
     .blog-post_cta_cursos{
         transform: translateX(.1rem);
     }
+    .title_miscursos{
+        font-size: 4rem;
+    }
+}
+
+@media screen and (max-width: 575px){
+    .title_miscursos{
+        font-size: 2.6rem;
+    }
 }
