--- a/web/assets/css/styleforo.css
+++ b/web/assets/css/styleforo.css
@@ -168,9 +168,9 @@ body {
   width: 680px;
   float: right;
   position: relative;
-  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+  /* -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
   -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-  box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+  box-shadow: 0 1px 1px rgba(0,0,0,0.15); */
 }
 
 .comments-list .comment-box:before, .comments-list .comment-box:after {
