--- a/web/assets/css/styleforo.css
+++ b/web/assets/css/styleforo.css
@@ -40,7 +40,7 @@ ul {
 
 body {
    font-family: 'Poppins', sans-serif;
-   background: #f0f8ff;
+   background: linear-gradient(0deg, rgba(231,244,255,1) 16%, rgba(224,199,229,0.9051995798319328) 50%, rgba(255,255,255,1) 100%);
 }
 
 /** ====================
