Diseño responsive-validaciones

--- a/web/assets/css/styleprogreso.css
+++ b/web/assets/css/styleprogreso.css
@@ -92,3 +92,18 @@
 
 }
 */
+
+@media (max-width:400px) {
+    .before{
+        display: none;
+    }
+    .next{
+        display: none;
+    }
+}
+
+/* .opciones{
+    justify-content: center;
+    align-items: center;
+    flex-shrink: ;
+} */
