--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -35,7 +35,7 @@
 .title-panel .txtBienvenido {
    
     color: black;
-    font-family: 'Baloo Tamma 2';
+    font-family: 'Baloo Tamma 2' !important;
     font-size: 100px;
     position: relative;
     top: 55px;
