--- a/web/assets/css/styledetcurso.css
+++ b/web/assets/css/styledetcurso.css
@@ -100,8 +100,6 @@
 
 
 #btnComentar {
-
-  /*Centrar botón*/
-  display: block; 
-  margin: 0 auto;
+    margin: 0 auto;
+    margin-bottom: 30px;
 }
