--- a/web/assets/css/style1.css
+++ b/web/assets/css/style1.css
@@ -182,6 +182,8 @@ a {
     padding-bottom: 3rem;
     overflow: auto;
     scrollbar-width: none;
+    position: relative;
+    left: 3px;
     /* For mozilla */
 }
 
@@ -282,6 +284,30 @@ a {
 
 .nav__logout-dashboard {
     margin-top: 5rem;
+}
+.nav__logout-dashboard button {
+    border-radius: 8px;
+    padding-left: 10px;
+    width: 36px;
+    transition: all .3s ease;
+}
+.nav__logout-dashboard span {
+    font-size: 14px;
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    transition: visibility 0s .1s, opacity .1s linear;
+}
+.nav__logout-dashboard-show button {
+    width: 80px;
+}
+.nav__logout-dashboard-show span {
+    font-size: 14px;
+    visibility: visible;
+    opacity: 1;
+    margin-top: 1px;
+    /* height: 10px; */
+    transition: visibility 0s .2s, opacity .4s linear;
 }
 
 .img__ilu {
@@ -469,6 +495,17 @@ a {
     }
     .nav-dashboard:hover .nav__dropdown-icon-dashboard {
         opacity: 1;
+    }
+    
+    .nav-dashboard:hover .nav__logout-dashboard button {
+        width: 80px;
+    }
+    .nav-dashboard:hover .nav__logout-dashboard span {
+        visibility: visible;
+        opacity: 1;
+        margin-top: 1px;
+        /* height: 10px; */
+        transition: visibility 0s .2s, opacity .4s linear;
     }
 }
 
