--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -104,9 +104,9 @@
 }
 
 @media (max-width: 1450px) {
-    .title-panel {
+   /*  .title-panel {
      
-    }
+    } */
     .container-image-panel img {
         width: 600px;
         transition: all 0.3s ease;
