--- a/web/assets/css/dashboardPcss/miscursos.css
+++ b/web/assets/css/dashboardPcss/miscursos.css
@@ -95,7 +95,7 @@ section {
   line-height: 1.8;
 }
 .cursos .box-container .box:hover {
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  box-shadow: 5px 5px 20px rgba(203, 0, 253, 0.4);
 }
 
 .curso-img {
