--- a/web/assets/css/styleprogreso.css
+++ b/web/assets/css/styleprogreso.css
@@ -100,10 +100,19 @@
     .next{
         display: none;
     }
+    .containervid{
+        position: relative;
+    }
+    .contvid{
+        /* centrar vertical y horizontalmente */
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -15px 0 0 -15px;
+    }
 }
 
-/* .opciones{
+.opciones{
     justify-content: center;
-    align-items: center;
-    flex-shrink: ;
-} */
+    display: flex;
+}
