--- a/web/assets/css/cursos.css
+++ b/web/assets/css/cursos.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap');
 
 body {
     background-color: #fff;
@@ -602,4 +603,53 @@ border-radius: 10px;
     .container-fluid .row .col-12 .card .col-7 .container-link {
         font-size: 13px;
     }
+}
+
+.container-card-title{
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.container-card-title .tittle {
+    text-transform: uppercase;
+    font-family: 'Baloo Tamma 2', cursive;
+}
+
+.container-card-description{
+    font-size: 13px; 
+    text-align: center;
+   
+}
+
+.container-card-description{
+    padding-bottom: 1px; 
+    margin-bottom: 1px; 
+    font-size: 14px; 
+    position: relative;
+    
+}
+
+.precio{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    justify-content: center;
+}
+
+.info{
+    background: #FFF; 
+    border-radius: 30px; 
+    font-weight: 500;  
+    width: 140px;
+    height: 30px;
+}
+
+.info a{
+    color: #7C83FD; 
+    font-size: 18px; 
+    text-decoration: none;
+    position: relative;
+    margin: auto;
+    padding: 9px;
+    top: -23px;
 }
