--- a/web/assets/css/styleforo.css
+++ b/web/assets/css/styleforo.css
@@ -85,7 +85,7 @@ body {
   position: absolute;
   background: #c7cacb;
   bottom: 0;
-  left: 27px;
+  left: 29px;
   width: 7px;
   height: 7px;
   border: 3px solid #dee1e3;
@@ -132,7 +132,7 @@ body {
   width: 65px;
   height: 65px;
   position: relative;
-  z-index: 99;
+  z-index: 2;
   float: left;
   border: 3px solid #FFF;
   -webkit-border-radius: 4px;
@@ -205,13 +205,12 @@ body {
   -webkit-border-radius: 4px 4px 0 0;
   -moz-border-radius: 4px 4px 0 0;
   border-radius: 30px 30px 0 0;
+  display: grid;
+  grid-template-columns: max-content 1fr max-content;
+  align-items: center;
 }
 
 .comment-box .comment-head i {
-  float: right;
-  margin-left: 14px;
-  position: relative;
-  top: 7px;
   color: #A6A6A6;
   cursor: pointer;
   -webkit-transition: color 0.3s ease;
@@ -227,8 +226,6 @@ body {
   color: #283035;
   font-size: 14px;
   font-weight: 700;
-  float: left;
-  margin-right: 10px;
 }
 
 .commen-name{
@@ -246,11 +243,12 @@ body {
 }
 
 .comment-box .comment-head span {
-  float: left;
   color: #fff;
   font-size: 13px;
-  position: relative;
-  top: 8px;
+}
+
+.comment-box .comment-head .time-ago {
+  margin-left: 10px;
 }
 
 .comment-box .comment-content {
@@ -281,8 +279,6 @@ body {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  position: relative;
-  top: 8px;
 }
 
 #btnComienzaAhora_2 {
@@ -315,11 +311,11 @@ body {
   }
 
   .comments-list .comment-box {
-     width: 260px;
+    width: 80%;
   }
 
   .reply-list .comment-box {
-     width: 190px;
+    width: 80%;
   }
 
   #btnComienzaAhora_2 {
@@ -337,7 +333,7 @@ body {
   }
 
   .comments-container {
-    width: 10px, auto !important;
+    width: 100%;
   }
 
   #botonEliminarTodo {
@@ -346,136 +342,226 @@ body {
     left: 12px;
   }
 }
+
+@media (max-width: 375px) {
+  /*Inicio - Comentarios*/
+  .comments-list .comment-avatar {
+    width: 38px;
+    height: 38px;
+  }
+  .comments-list::before {
+    left: 18px;
+  }
+  .reply-list {
+    padding-left: 58px;
+  }
+  .reply-list li::before {
+    left: -39px;
+    top: 21px;
+    width: 40px;
+  }
+  .comments-list .comment-box {
+    width: 85%;
+    top: -14px;
+    left: 15px;
+  }
+  .reply-list .comment-box {
+    width: 82%;
+  }
+  .comments-list:after {
+    left: 16px;
+  }
+  .comment-box .comment-head, .comment-box .comment-content {
+    padding: 10px 12px 10px 16px;
+  }
+  .comment-box .comment-head {
+    border-radius: 15px 15px 0 0;
+  }
+  .comment-box .comment-content {
+    border-radius: 0 0 15px 15px;
+  }
+  .comments-container {
+    width: 96%;
+  }
+  .comment-box .comment-head .time-ago {
+    margin-left: 0px;
+  }
+  .container-comment-autor {
+    grid-row: 1;
+    grid-column: 1/3;
+    margin-bottom: 6px;
+  }
+  .container-time-ago{
+    grid-column: 1/2;
+  }
+  .container-comment-actions {
+    justify-self: end;
+    grid-column: 2/3;
+  }
+  .container-comment-answer {
+    grid-row: 3;
+  }
+  .container-comment-answer button {
+    font-size: 13px;
+    padding: 0 4px 0 4px;
+    margin-top: 6px;
+  }
+  /*Fin - Comentarios*/
+}
+@media (max-width: 320px) {
+  /*Inicio - Comentarios*/
+  .reply-list {
+    padding-left: 35px;
+  }
+  .reply-list li::before {
+    left: -17px;
+    top: 21px;
+    width: 27px;
+  }
+  .comments-list .comment-box {
+    top: -14px;
+    left: 15px;
+  }
+  .comment-box .comment-head .container-comment-actions i {
+    position: static;
+  }
+  .container-comment-answer button {
+    position: static;
+    font-size: 13px;
+    padding: 0 4px 0 4px;
+    margin-top: 4px;
+  }
+  /*Fin - Comentarios*/
+}
 /****************************************************************************************************/
 
 /* CODIGO SIDEBAR */
 
 :root{
-   --orange:#9494fc ;
-  }
+  --orange:#9494fc ;
+}
+
+.cont_formular{
+    width: 100%;
+    height: auto;
+    padding: 15px;
+}
+
+.container-contformulario{
+  font-family: 'Nunito', sans-serif;
+}
+
+.boton1{
+  display: inline-block;
+  margin-top: 1rem;
+  background:var(--orange);
+  color:#fff;
+  padding:.8rem 3rem;
+  border:.2rem solid var(--orange);
+  cursor: pointer;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.boton1:hover{
+  background:#d6d6fd ;
+  border-color: #d6d6fd ;
+  color:#a9a9af ;
+  font-weight: bold;
+  transition: 0.3s ease-in-out all;
+}
+
+.contformulario .row{
+  display: flex;
+  flex-wrap: wrap;
+  gap:1.5rem;
+  align-items: center;
+  margin: 0 1rem;
+}
+
+.contformulario .row .image{
+  flex:1 1 25rem;
+}
+
+.contformulario .row .image img{
+  width:100%;
+}
+
+.contformulario .row form{
+  flex:1 1 25rem;
+  padding:1rem;
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
+  border-radius: .5em;
+  display: inline-block;
+  grid-template-columns:auto auto;
+  gap: 10px;
+  width: 100%;
+}
+
+.contformulario .row form .inputBox{
+  padding:.5rem 0;
+}
+.contformulario .row form .boton1{
+  grid-column: 1 / 3;
+}
+
+.contformulario .row form .inputBox input, select, textarea{
+  font-family: 'Nunito', sans-serif;
+  width:100%;
+  padding:.5rem 0 .5rem .5rem;
+  border:.1rem solid rgba(0,0,0,.1);
+  font-size: 1em;
+  color:#333;
+  text-transform: none;
+}
+.contformulario .row form .inputBox input:focus , select:focus, textarea:focus{
+  border-color: #8494f4  ;
+  outline: 0 none;
   
-  .cont_formular{
-     width: 100%;
-     height: auto;
-     padding: 15px;
-  }
+}
+
+.contformulario .row form .inputBox h3{
+  /*font-size: 1em;*/
+  color:#666;
+  margin: 0.5rem 0;
+  font-weight: bold;
+}
+
+.title{
+  font-family: 'Satisfy', cursive;
+  font-size: 3em;
+  color: #27ae60;
+}
+
+.about .content {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 30rem;
+  flex: 1 1 30rem;
+}
   
-  .container-contformulario{
-   font-family: 'Nunito', sans-serif;
-  }
-  
-  .boton1{
-   display: inline-block;
-   margin-top: 1rem;
-   background:var(--orange);
-   color:#fff;
-   padding:.8rem 3rem;
-   border:.2rem solid var(--orange);
-   cursor: pointer;
-   font-size: 1rem;
-   width: 100%;
-  }
-  
-  .boton1:hover{
-   background:#d6d6fd ;
-   border-color: #d6d6fd ;
-   color:#a9a9af ;
-   font-weight: bold;
-   transition: 0.3s ease-in-out all;
-  }
-  
-  .contformulario .row{
-   display: flex;
-   flex-wrap: wrap;
-   gap:1.5rem;
-   align-items: center;
-   margin: 0 1rem;
-  }
-  
-  .contformulario .row .image{
-   flex:1 1 25rem;
-  }
-  
-  .contformulario .row .image img{
-   width:100%;
-  }
-  
-  .contformulario .row form{
-   flex:1 1 25rem;
-   padding:1rem;
-   box-shadow: 0 1rem 2rem rgba(0,0,0,.1);
-   border-radius: .5em;
-   display: inline-block;
-   grid-template-columns:auto auto;
-   gap: 10px;
-   width: 100%;
-  }
-  
-  .contformulario .row form .inputBox{
-   padding:.5rem 0;
-  }
-  .contformulario .row form .boton1{
-   grid-column: 1 / 3;
-  }
-  
-  .contformulario .row form .inputBox input, select, textarea{
-   font-family: 'Nunito', sans-serif;
-   width:100%;
-   padding:.5rem 0 .5rem .5rem;
-   border:.1rem solid rgba(0,0,0,.1);
-   font-size: 1em;
-   color:#333;
-   text-transform: none;
-  }
-  .contformulario .row form .inputBox input:focus , select:focus, textarea:focus{
-   border-color: #8494f4  ;
-   outline: 0 none;
-   
-  }
-  
-  .contformulario .row form .inputBox h3{
-   /*font-size: 1em;*/
-   color:#666;
-   margin: 0.5rem 0;
-   font-weight: bold;
-  }
-  
-  .title{
-     font-family: 'Satisfy', cursive;
-     font-size: 3em;
-     color: #27ae60;
-  }
-  
-  .about .content {
-     -webkit-box-flex: 1;
-     -ms-flex: 1 1 30rem;
-     flex: 1 1 30rem;
-   }
-   
-   .about .content span {
-     font-family: "Satisfy", cursive;
-     font-size: 3rem;
-     color: #27ae60;
-   }
-  
-   .boton_personalizado{
-     display: inline-block;
-     text-align: center;
-     justify-content: center;
-     align-items: center;
-     text-decoration: none;
-     padding: 5px;
-     margin: 5px;
-     color: #ffffff;
-     border: none;
-     background: gray;
-     border-radius: 5px;
-     cursor: pointer;
-     font-size:medium;
-   }
-  
-   .boton_personalizado:hover{
-     background: black;
-     transition: 0.3s ease-in-out all;
-   }
-  
+.about .content span {
+  font-family: "Satisfy", cursive;
+  font-size: 3rem;
+  color: #27ae60;
+}
+
+.boton_personalizado{
+  display: inline-block;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  padding: 5px;
+  margin: 5px;
+  color: #ffffff;
+  border: none;
+  background: gray;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size:medium;
+}
+
+.boton_personalizado:hover{
+  background: black;
+  transition: 0.3s ease-in-out all;
+}
