--- a/web/assets/css/styleforo.css
+++ b/web/assets/css/styleforo.css
@@ -43,27 +43,38 @@ body {
    background: linear-gradient(0deg, rgba(231,244,255,1) 16%, rgba(224,199,229,0.9051995798319328) 50%, rgba(255,255,255,1) 100%);
 }
 
+.container-nina {
+  right: 0;
+  position: absolute;
+  padding-right: 3rem;
+  width: max-content;
+}
+.img-nina {
+  min-width: 200px;
+  max-width: 430px;
+  float: right;
+}
+
 /** ====================
 * Lista de Comentarios
 =======================*/
+
 .comments-container {
-  margin: 60px auto 15px;
-  width: 768px;
+  margin-left: 54px;
+  flex-grow: 1;
 }
 
-.comments-container h1 {
-  font-size: 26px;
-  color: #7C83FD;
-  font-weight: 700;
+#comments-list {
+  width: 100%;
+  max-width: 740px;
 }
 
-.comments-container h1 a {
-  font-size: 18px;
-  font-weight: 700;
+.comment-box {
+  width: 100%;
 }
 
 .comments-list {
-  margin-top: 5px;
+  margin: 1rem 0;
   position: relative;
 }
 
@@ -93,11 +104,13 @@ body {
   -moz-border-radius: 50%;
   border-radius: 50%;
 }
+.comments-list.reply-list li {
+  display: flex;
+}
 
-.reply-list:before, .reply-list:after {display: none;}
 .reply-list li:before {
   content: '';
-  width: 60px;
+  width: 55px;
   height: 2px;
   background: #c7cacb;
   position: absolute;
@@ -105,9 +118,7 @@ body {
   left: -55px;
 }
 
-
 .comments-list li {
-  margin-bottom: 15px;
   display: block;
   position: relative;
 }
@@ -122,22 +133,19 @@ body {
 
 .reply-list {
   padding-left: 88px;
-  clear: both;
   margin-top: 15px;
 }
 /**
 * Avatar
 ---------------------------*/
 .comments-list .comment-avatar {
+  flex-shrink: 0;
   width: 65px;
   height: 65px;
-  position: relative;
-  z-index: 2;
-  float: left;
   border: 3px solid #FFF;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
-  border-radius: 32px;
+  border-radius: 50%;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
@@ -147,6 +155,9 @@ body {
 .comments-list .comment-avatar img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  max-width: unset;
 }
 
 .reply-list .comment-avatar {
@@ -154,65 +165,25 @@ body {
   height: 50px;
 }
 
-.comment-main-level:after {
-  content: '';
-  width: 0;
-  height: 0;
-  display: block;
-  clear: both;
-}
 /**
 * Caja del Comentario
 ---------------------------*/
-.comments-list .comment-box {
-  width: 612px;
-  float: left;
-  position: relative;
-  left: 22px;
-  /* -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-  box-shadow: 0 1px 1px rgba(0,0,0,0.15); */
+
+.comment-box .comment-head, .comment-box .comment-content {
+  padding: 10px 12px 10px 22px;
 }
 
-
-.comments-list .comment-box:before, .comments-list .comment-box:after {
-  content: '';
-  height: 0;
-  width: 0;
-  position: absolute;
-  display: block;
-  border-width: 10px 12px 10px 0;
-  border-style: solid;
-  border-color: transparent #7C83FD;
-  top: 25px;
-  left: -11px;
-}
-
-.comments-list .comment-box:before {
-  border-width: 11px 13px 11px 0;
-  border-color: transparent rgba(0,0,0,0.05);
-  left: -12px;
-}
-
-.reply-list .comment-box {
-  width: 610px;
-}
 .comment-box .comment-head {
   background: #7C83FD;
-  padding: 10px 22px;
   border-bottom: 1px solid #E5E5E5;
   overflow: hidden;
   -webkit-border-radius: 4px 4px 0 0;
   -moz-border-radius: 4px 4px 0 0;
   border-radius: 30px 30px 0 0;
-  display: grid;
-  grid-template-columns: max-content 1fr max-content;
-  align-items: center;
 }
 
 .comment-box .comment-head i {
   color: #A6A6A6;
-  cursor: pointer;
   -webkit-transition: color 0.3s ease;
   -o-transition: color 0.3s ease;
   transition: color 0.3s ease;
@@ -232,10 +203,7 @@ body {
   color: #fff;
   font-size: 17px;
   font-weight: 700;
-  float: left;
-  margin-right: 10px;
-  margin-top: 10px;
-  margin-left: -12px;
+  margin-bottom: 0;
 }
 
 .comment-box .comment-name a {
@@ -247,24 +215,17 @@ body {
   font-size: 13px;
 }
 
-.comment-box .comment-head .time-ago {
-  margin-left: 10px;
-}
-
 .comment-box .comment-content {
   background: #FFF;
-  padding: 12px;
   font-size: 15px;
   color: black;
   -webkit-border-radius: 0 0 4px 4px;
   -moz-border-radius: 0 0 4px 4px;
   border-radius: 0 0 30px 30px;
-
   width: auto;
   /* Control de la altura con base en el texto del div*/
   height: auto;
   word-wrap: break-word;
-
 }
 
 .comment-box .comment-name.by-author, .comment-box .comment-name.by-author a {color: #03658c;}
@@ -305,18 +266,34 @@ body {
 /** =====================
 * Responsive
 ========================*/
-@media only screen and (max-width: 766px) {
+@media (max-width: 1300px) {
+  .img-nina {
+      position: relative;
+      top: -130px;
+      max-width: 320px;
+  }
+}
+@media (max-width: 913px) {
+  div.flex.topup {
+      flex-direction: column;
+  }
+  .container-nina {
+      position: static;
+      width: auto;
+      padding-right: 0;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 2rem;
+  }
+  .img-nina {
+      position: static;
+      max-width: 250px;
+  }
   .comments-container {
-     width: 350px;
+      margin-right: 54px;
   }
-
-  .comments-list .comment-box {
-    width: 80%;
-  }
-
-  .reply-list .comment-box {
-    width: 80%;
-  }
+}
+@media only screen and (max-width: 766px) {
 
   #btnComienzaAhora_2 {
     width: auto;
@@ -332,10 +309,6 @@ body {
     margin: 0 auto;
   }
 
-  .comments-container {
-    width: 100%;
-  }
-
   #botonEliminarTodo {
 
     position: relative;
@@ -343,8 +316,18 @@ body {
   }
 }
 
-@media (max-width: 375px) {
-  /*Inicio - Comentarios*/
+@media (max-width: 668px) {
+  .comment-box .comment-head button {
+    padding: 0 0.2rem;
+    font-size: .8rem;
+  }
+  .comment-box .comment-head span {
+    font-size: .8rem;
+  }
+  .comment-box .comment-content {
+    font-size: .9rem;
+  }
+
   .comments-list .comment-avatar {
     width: 38px;
     height: 38px;
@@ -360,14 +343,6 @@ body {
     top: 21px;
     width: 40px;
   }
-  .comments-list .comment-box {
-    width: 85%;
-    top: -14px;
-    left: 15px;
-  }
-  .reply-list .comment-box {
-    width: 82%;
-  }
   .comments-list:after {
     left: 16px;
   }
@@ -380,58 +355,16 @@ body {
   .comment-box .comment-content {
     border-radius: 0 0 15px 15px;
   }
-  .comments-container {
-    width: 96%;
-  }
-  .comment-box .comment-head .time-ago {
-    margin-left: 0px;
-  }
-  .container-comment-autor {
-    grid-row: 1;
-    grid-column: 1/3;
-    margin-bottom: 6px;
-  }
-  .container-time-ago{
-    grid-column: 1/2;
-  }
-  .container-comment-actions {
-    justify-self: end;
-    grid-column: 2/3;
-  }
-  .container-comment-answer {
-    grid-row: 3;
-  }
-  .container-comment-answer button {
-    font-size: 13px;
-    padding: 0 4px 0 4px;
-    margin-top: 6px;
-  }
-  /*Fin - Comentarios*/
 }
-@media (max-width: 320px) {
-  /*Inicio - Comentarios*/
+@media (max-width: 425px) {
   .reply-list {
     padding-left: 35px;
   }
   .reply-list li::before {
     left: -17px;
     top: 21px;
-    width: 27px;
+    width: 17px;
   }
-  .comments-list .comment-box {
-    top: -14px;
-    left: 15px;
-  }
-  .comment-box .comment-head .container-comment-actions i {
-    position: static;
-  }
-  .container-comment-answer button {
-    position: static;
-    font-size: 13px;
-    padding: 0 4px 0 4px;
-    margin-top: 4px;
-  }
-  /*Fin - Comentarios*/
 }
 /****************************************************************************************************/
 
