--- a/web/assets/css/footer.css
+++ b/web/assets/css/footer.css
@@ -9,6 +9,8 @@
 
 }
 
+
+
 footer ul {
   padding: 0;
   margin: 0;
@@ -75,6 +77,7 @@ footer a:hover {
 .widget-about .contact-details li a {
   color: #5867dd;
 }
+/**/
 @media (max-width: 991px) {
   .footer-menu {
     padding-left: 0;
@@ -82,7 +85,10 @@ footer a:hover {
   .widget-about img {
     max-width: 100%;
   }
+
 }
+
+
 /*#e5f3ff*/ 
 .site-footer {
     padding: 0 0 20px;
@@ -123,49 +129,35 @@ footer a:hover {
       margin-bottom: 30px;
     }
   }
+  
   @media (max-width: 767px) {
     .site-footer {
       padding-bottom: 0;
     }
     .site-footer .copyright-text,
-    .site-footer .social-icons {
+    .site-footer .social-icons{
       text-align: center;
-    }
+    }     
+    
+
+
   }
-
-
-
-
-
-
 
 
   @media (min-width: 1200px) {
-
-
-
-
     .social-icons {
       padding-right: 50px;
     }
-
-
-
-    .footer-widget .footer-menu {
-      
+    .footer-widget .footer-menu {      
       float: right;
       margin: 0;
     }
-
     /*Mover el logo del footer.*/
     .footer-widget .widget-about .img-fluid {
-
-      margin-left: 80px;
-      
+      margin-left: 80px;      
     }
-
-
   }
+  
 
 
 
